# SM-NMPC

./: README.md
ArduinoNMPC/libraries/quad_lnmpc/: SolutionAnalysis.cpp  acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_solver.c
ArduinoNMPC/nmpcpidteensy/: nmpcpidteensy.ino
ArduinoSMNMPC/libraries/Bolder_Flight_Systems_SBUS/src/: sbus.cpp
ArduinoSMNMPC/libraries/quad_lnmpc/: acado_common.h  acado_integrator.c  acado_solver.c
ArduinoSMNMPC/smnmpcquad/: smnmpcquad.ino
acadogencube/: CMakeLists.txt
acadogenquad/: CMakeLists.txt
acadogenquad/src/: acadogenquad.cpp
nmpccube/: CMakeLists.txt
nmpccube/src/: acadogencube.cpp
smcmpcquad/: CMakeLists.txt  package.xml
smcmpcquad/include/: acado_common.h  acado_qpoases_interface.hpp
smcmpcquad/launch/: model.launch.py
smcmpcquad/src/: EKFnode.cpp  getdata.cpp  smcmpcquad.cpp  uavplugin.cc
smcmpcquad/urdf/: uav_drone.urdf.xacro
smcnmpccube/: CMakeLists.txt  package.xml
smcnmpccube/include/: acado_common.h
smcnmpccube/launch/: model.launch.py
smcnmpccube/models/meshes/: propbackleft.STL  propbackright.STL  propbackrighttop.STL  propfrontleft.STL  propfrontright.STL  propmidleft.STL  propmidright.STL  wheelbackleft.STL  wheelbacklefttop.STL  wheelbackright.STL  wheelbackrighttop.STL  wheelfrontleft.STL  wheelfrontlefttop.STL  wheelfrontright.STL  wheelfrontrighttop.STL
smcnmpccube/src/: cubeplugin.cc  smcnmpccube.cpp
smcnmpccube/urdf/: cube.urdf.xacro
smcnmpccube/worlds/: default.world
